# semantic-backup-explorer

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  backup_config.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_backup.bat  sitemap.xml
.github/workflows/: auto-version.yml  ci.yml  docs.yml
api/: index.html
architecture/: index.html
configuration/: index.html
data/: backup_index.md
data/embeddings/: chroma.sqlite3
docs/: api.md  architecture.md  configuration.md  index.md  usage.md
scripts/: auto_sync.py  build_index.py
search/: search_index.json
semantic_backup_explorer/: exceptions.py
semantic_backup_explorer/app/: gradio_app.py
semantic_backup_explorer/chunking/: folder_chunker.py
semantic_backup_explorer/cli/ui/: gradio_app.py
semantic_backup_explorer/compare/: folder_diff.py
semantic_backup_explorer/core/: backup_operations.py
semantic_backup_explorer/indexer/: scan_backup.py
semantic_backup_explorer/rag/: embedder.py  rag_pipeline.py  retriever.py
semantic_backup_explorer/sync/: sync_missing.py
semantic_backup_explorer/utils/: compatibility.py  config.py  drive_utils.py  index_utils.py  logging_utils.py  path_utils.py
src/app/: gradio_app.py
src/chunking/: folder_chunker.py
src/indexer/: scan_backup.py
src/rag/: rag_pipeline.py  retriever.py
src/sync/: sync_missing.py
tests/: integration_test.py  test_config.py  test_core_operations.py  test_folder_chunker.py  test_index_metadata.py  test_index_utils.py  test_logging.py  test_rag.py  test_sync.py  test_sync_mtime.py  test_sync_workflow.py  test_utils.py
tests/integration/: index.md
tests/integration/embeddings/: chroma.sqlite3
usage/: index.html
